For Role Requests, filter owners for Role search in the API (#252)
